# Dolphin

./: .gitignore  Cargo.toml  test_sprintf.c
devices/mmio-trait/: Cargo.toml
devices/mmio-trait/src/: lib.rs
devices/profile/: device.toml
devices/timer/: Cargo.toml
devices/timer/src/: lib.rs
devices/uart/: Cargo.toml
devices/uart/src/: lib.rs
emulator/: .gitignore  Cargo.toml
emulator/emulator_test/: .gitignore  build_and_run.py
emulator/emulator_test/test_c/: CMakeLists.txt  add.c  hello.c  linker.ld  loop.c  start.S
emulator/profile/: config.toml
emulator/src/: const_values.rs  lib.rs  main.rs
emulator/src/difftest/: mod.rs
emulator/src/emu_ref/: mod.rs
emulator/src/emulator/: device_manager.rs  exception.rs  execute.rs  memory.rs  mod.rs  state.rs
emulator/src/emulator/gdb/: breakpoints.rs  mod.rs
emulator/src/emulator/instructions/: clock_cache.rs  insts.rs  mod.rs  rv64a.rs  rv64i.rs  rv64m.rs
emulator/src/emulator/tracer/: mod.rs
emulator/src/system/: memory.rs  syscall.rs
emulator/src/utils/: bit_slice.rs  bit_utils.rs  disasm.rs  elf.rs  mod.rs
emulator_test/test_c/: CMakeLists.txt
runtime/: .gitignore  c_runtime.c  dolphin_runtime.h  klib-macros.h  klib.c  klib.h  linker.ld  math.c  start.S  timer.c  timer.h  toml_to_header.py  trap.h  trm.c  uart.c  uart.h  xmake.lua
runtime/c/: dolphin_runtime.h
runtime/gnu/: stubs-lp64.h
src/: const_values.rs  lib.rs  main.rs
src/debugger/: breakpoints.rs  gdb_server.rs  mod.rs
src/emulator/: execute.rs  gdb.rs  memory.rs  mod.rs  state.rs
src/emulator/gdb/: breakpoints.rs  mod.rs
src/emulator/tracer/: itracer.rs
src/system/: memory.rs  mod.rs  syscall.rs
src/utils/: disasm.rs  elf.rs  mod.rs  ringbuf.rs
test/cpu_test/: add.c  hello-str.c  hello.c  klib_test.c  load-store.c  loop.c  timer.c  uart.c  unalign.c  xmake.lua
test/microbench/: README.md  compile_commands.json  xmake.lua
test/microbench/include/: benchmark.h
test/microbench/src/: bench.c
test/microbench/src/lzip/: quicklz.h
