[package]
name = "emulator"
version = "0.1.0"
edition = "2024"
authors = ["mingerfan"]
description = "A RISC-V emulator implemented in Rust"

[dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 配置文件解析
toml = "0.9.5"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 调试支持 - 设置为可选依赖
gdbstub = { version = "0.7.5", features = ["alloc"], optional = true }
gdbstub_arch = { version = "0.3.1", optional = true }

# 效率提升
rustc-hash = "1.1"
hex = "0.4"

# ELF文件解析
object = "0.32"
nohash-hasher = "0.2.0"

# 反汇编支持
capstone = "0.12"

rv64emu = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
colored = "3.0.0"
clockpro-cache = {git = "https://github.com/mingerfan/rust-clockpro-cache.git"}

# MMIO 设备支持
mmio-trait = { path = "../devices/mmio-trait" }
uart = { path = "../devices/uart" }
timer = { path = "../devices/timer" }

[features]
gdb = ["gdbstub", "gdbstub_arch"]  # 新增 GDB 特性
tracer = []
difftest = []
default = []

[profile.release]
debug = true
